# these are the headers for your project

noinst_HEADERS = commands.h \
		 directorylisting.h \
		 engineprivate.h \
		 externalipresolver.h \
		 FileZillaEngine.h \
		 libfilezilla.h \
		 local_filesys.h \
		 local_path.h \
		 logging.h \
		 misc.h \
		 notification.h \
		 optionsbase.h \
		 refcount.h \
		 server.h \
		 serverpath.h \
		 setup.h \
		 sizeformatting_base.h \
		 socket.h \
		 threadex.h \
		 timeex.h

